# log-analyzer

./: .gitignore  Cargo.toml  README.md
src/log_analyzer/: Cargo.toml
src/log_analyzer/src/: detection.rs  field_mappings.rs  main.rs  server.rs  sigma_rule.rs
src/log_analyzer/test/assets/do_not_modify_folder/: invalid_rule.yml
src/log_analyzer/test/assets/is_not_yml_file/: not_yml.txt
src/sigma_rule_parser/: Cargo.toml
src/sigma_rule_parser/src/: and_parser.rs  atomic_parsers.rs  detection_builder.rs  detection_parsers.rs  lib.rs  not_parser.rs  operator_parsers.rs  or_parser.rs  parens_parser.rs  parser.rs  parser_output.rs  search_id_parser.rs  sigma_file.rs  structs.rs  sub_parsers.rs
src/sigma_rule_parser/src/condition_parsers/: and_parser.rs  not_parser.rs  or_parser.rs  parens_parser.rs  parser_output.rs  search_id_parser.rs  sub_parsers.rs
src/sigma_rule_parser/src/detection_parsers/: and_parser.rs  atomic_parsers.rs  condition.rs  condition_parser.rs  logic.rs  logic_parser.rs  not_parser.rs  or_parser.rs  parens_parser.rs  search_id_parser.rs  sub_parsers.rs
src/sigma_rule_parser/src/detection_parsers/condition/: and_parser.rs  condition_parser.rs  (+5 more)
src/sigma_rule_parser/src/sigma_file/: sigma_rule.rs  yml.rs
src/sigma_rule_parser/src/structs/: condition.rs  detection.rs  detection_condition.rs  detection_logic.rs  detection_metadata.rs  sigma_rule.rs
src/sigma_rule_parser/src/sub_parsers/: and_parser.rs  atomic_parsers.rs  not_parser.rs  operator_parsers.rs  or_parser.rs  parens_parser.rs  search_id_parser.rs  take_until_unbalanced.rs
(+50 files in other folders)
