[package]
name = "sigma_rule_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
log4rs = "1.1.1"
nom = "7"
nom_locate = "4.0.0"
walkdir = "2.3.2"
